cmake_minimum_required(VERSION 3.13)
project(push_swap)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(lib/printf)
include_directories(lib/printf/libft)

add_executable(push_swap
        lib/printf/libft/ft_atoi.c
        lib/printf/libft/ft_bzero.c
        lib/printf/libft/ft_colorize_str.c
        lib/printf/libft/ft_isalnum.c
        lib/printf/libft/ft_isalpha.c
        lib/printf/libft/ft_isascii.c
        lib/printf/libft/ft_isdigit.c
        lib/printf/libft/ft_isprint.c
        lib/printf/libft/ft_itoa.c
        lib/printf/libft/ft_lstadd.c
        lib/printf/libft/ft_lstchange.c
        lib/printf/libft/ft_lstdel.c
        lib/printf/libft/ft_lstdelone.c
        lib/printf/libft/ft_lstiter.c
        lib/printf/libft/ft_lstjoin.c
        lib/printf/libft/ft_lstmap.c
        lib/printf/libft/ft_lstnew.c
        lib/printf/libft/ft_lstprint.c
        lib/printf/libft/ft_make_lst.c
        lib/printf/libft/ft_memalloc.c
        lib/printf/libft/ft_memccpy.c
        lib/printf/libft/ft_memchr.c
        lib/printf/libft/ft_memcmp.c
        lib/printf/libft/ft_memcpy.c
        lib/printf/libft/ft_memdel.c
        lib/printf/libft/ft_memmove.c
        lib/printf/libft/ft_memset.c
        lib/printf/libft/ft_putchar.c
        lib/printf/libft/ft_putchar_fd.c
        lib/printf/libft/ft_putendl.c
        lib/printf/libft/ft_putendl_fd.c
        lib/printf/libft/ft_putnbr.c
        lib/printf/libft/ft_putnbr_fd.c
        lib/printf/libft/ft_putstr.c
        lib/printf/libft/ft_putstr_fd.c
        lib/printf/libft/ft_strcat.c
        lib/printf/libft/ft_strchr.c
        lib/printf/libft/ft_strclr.c
        lib/printf/libft/ft_strcmp.c
        lib/printf/libft/ft_strcpy.c
        lib/printf/libft/ft_strdel.c
        lib/printf/libft/ft_strdup.c
        lib/printf/libft/ft_strequ.c
        lib/printf/libft/ft_striter.c
        lib/printf/libft/ft_striteri.c
        lib/printf/libft/ft_strjoin.c
        lib/printf/libft/ft_strlcat.c
        lib/printf/libft/ft_strlen.c
        lib/printf/libft/ft_strmap.c
        lib/printf/libft/ft_strmapi.c
        lib/printf/libft/ft_strncat.c
        lib/printf/libft/ft_strncmp.c
        lib/printf/libft/ft_strncpy.c
        lib/printf/libft/ft_strnequ.c
        lib/printf/libft/ft_strnew.c
        lib/printf/libft/ft_strnstr.c
        lib/printf/libft/ft_strrchr.c
        lib/printf/libft/ft_strsplit.c
        lib/printf/libft/ft_strstr.c
        lib/printf/libft/ft_strsub.c
        lib/printf/libft/ft_strsubi.c
        lib/printf/libft/ft_strtrim.c
        lib/printf/libft/ft_strtrim_c.c
        lib/printf/libft/ft_tolower.c
        lib/printf/libft/ft_toupper.c
        lib/printf/libft/ft_word_count_c.c
        lib/printf/libft/libft.h
        lib/printf/flag_modifiers.c
        lib/printf/float_functions.c
        lib/printf/ft_fldtoa_funcs.c
        lib/printf/ft_ftoa.c
        lib/printf/ft_itoa_im.c
        lib/printf/ft_itoa_ll.c
        lib/printf/ft_itoa_st.c
        lib/printf/ft_itoa_uh.c
        lib/printf/ft_itoa_uhh.c
        lib/printf/ft_itoa_ui.c
        lib/printf/ft_itoa_uim.c
        lib/printf/ft_itoa_ull.c
        lib/printf/ft_ldtoa.c
        lib/printf/ft_ntoa.c
        lib/printf/ft_printf.c
        lib/printf/ft_printf.h
        lib/printf/helper_functions.c
        lib/printf/ntoa_ox_modificators.c
        lib/printf/print_char.c
        lib/printf/print_float.c
        lib/printf/print_floatfuncs.c
        lib/printf/print_functions.c
        lib/printf/print_int.c
        lib/printf/print_int2.c
        lib/printf/print_ld.c
        lib/printf/print_oxp.c
        lib/printf/print_string.c
        lib/printf/print_string_colour.c
        lib/printf/print_u.c
        lib/printf/searchers.c
        lib/printf/utilities.c
        lib/printf/utilities2.c
        lib/printf/validators.c
        lib/printf/zero_cases_xop.c
        lib/privacy.sh
        src/rand.sh
        author
        main.c
        push_swap.h ring_functions.c ps_commands.c src/scratch_tmp.c validate.c)
